# understanding_bayesian_optimization

./: .gitignore  pyproject.toml
examples/: thompson_sampling.ipynb
src/udnerstanding_bayesian_optimization/: __init__.py
