[project]
name = "udnerstanding-bayesian-optimization"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "0h-n0", email = "kbu94982@gmail.com" }
]
dependencies = [
    "botorch>=0.9.5",
    "notebook>=7.1.0",
    "ipywidgets>=8.1.2",
    "plotly>=5.19.0",
    "kaleido>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "udnerstanding_bayesian_optimization:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/udnerstanding_bayesian_optimization"]
